# VibeTrack

./: .gitignore  CHANGELOG.md  FUTURE_VERSIONS.md  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  README.md  USAGE.md  demo.py  demo_vibe.py  install.sh  install_global.sh  install_hook.py  pyproject.toml  requirements.txt  setup.py  test_diff.py  test_llm.py
.github/workflows/: vibetrack-ci.yml
examples/: new.py  old.py
vibetrack/: README.md  __main__.py  cli_en.py  cli_persian.py  commit_analyzer.py  diff_utils.py  llm_analyzer.py  local_client.py  main.py  privacy_manager.py  save_result.py
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: extension.ts
